문의하기 페이지 css 조정

--- a/src/main/resources/static/css/sidebar.css
+++ b/src/main/resources/static/css/sidebar.css
@@ -133,3 +133,11 @@ tr td:nth-child(5){text-align:center;}
 .page-box a.btn.on {
     background-color: #dbdbdb;
 }
+
+textarea.ask_content {
+    height: 380px;
+}
+
+.ask_title {
+    height: 50px;
+}
