--- a/src/main/resources/templates/ask.html
+++ b/src/main/resources/templates/ask.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="css/sidebar.css" />
 </head>
 <body class="sub_page">
 <div th:replace="fragments/header :: headerFragment"></div>
 <div th:include="fragments/nav.html"></div>
-
+<link rel="stylesheet" type="text/css" href="css/sidebar.css" />
 
 
 <!-- book section -->
@@ -25,39 +24,17 @@
         <div class="form_container">
           <form action="">
             <div>
-              <input type="text" class="form-control" placeholder="Your Name" />
+              <input type="text" class="form-control ask_title" placeholder="제목" />
             </div>
             <div>
-              <input type="text" class="form-control" placeholder="Phone Number" />
+              <textarea class="form-control ask_content" required="" placeholder="내용"></textarea>
             </div>
             <div>
-              <input type="email" class="form-control" placeholder="Your Email" />
-            </div>
-            <div>
-              <select class="form-control nice-select wide">
-                <option value="" disabled selected>
-                  How many persons?
-                </option>
-                <option value="">
-                  2
-                </option>
-                <option value="">
-                  3
-                </option>
-                <option value="">
-                  4
-                </option>
-                <option value="">
-                  5
-                </option>
-              </select>
-            </div>
-            <div>
-              <input type="date" class="form-control">
+              <input type="hidden" class="form-control">
             </div>
             <div class="btn_box">
               <button>
-                Book Now
+                문의하기
               </button>
             </div>
           </form>
