문의하기 기능 & 상품 css 조정

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -416,6 +416,7 @@ a:focus {
     transition: all 0.2s;
 }
 .food_section .box .detail-box {
+    height: 145px;
     padding: 25px;
 }
 .food_section .box .detail-box h5 {
