--- a/src/main/resources/templates/ask.html
+++ b/src/main/resources/templates/ask.html
@@ -22,18 +22,17 @@
           <h2> 문의하기 </h2>
         </div>
         <div class="form_container">
-          <form action="">
+          <form action="ask" method="post" th:object="${ask}">
+            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
             <div>
-              <input type="text" class="form-control ask_title" placeholder="제목" />
+              <input type="text" th:field="*{title}" class="form-control ask_title" placeholder="제목" />
             </div>
             <div>
-              <textarea class="form-control ask_content" required="" placeholder="내용"></textarea>
+              <textarea th:field="*{content}" class="form-control ask_content" required="" placeholder="내용"></textarea>
             </div>
-            <div>
-              <input type="hidden" class="form-control">
-            </div>
+
             <div class="btn_box">
-              <button>
+              <button type="submit">
                 문의하기
               </button>
             </div>
