url 수정, 마이페이지 정보 로드

--- a/src/main/resources/templates/Item/item_detail.html
+++ b/src/main/resources/templates/Item/item_detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-  <link rel="stylesheet" type="text/css" href="css/item_detail.css" />
+  <link rel="stylesheet" type="text/css" href="/css/item_detail.css" />
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -75,7 +75,7 @@
 
 
 
-<script src="js/item_detail.js"></script>
+<script src="/js/item_detail.js"></script>
 <script th:if="${errorMessage != null and errorMessage ne ''}" th:inline="javascript">
   alert([[${errorMessage}]]);  // 에러 메시지가 존재하고 비어있지 않을 경우 경고창을 띄움
 </script>
