--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -17,19 +17,19 @@
                         <a class="nav-link" href="home">홈 <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Bitem">팔찌</a>
+                        <a class="nav-link" href="/shopping/Bitem">팔찌</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="itemAdd">등록</a>
+                        <a class="nav-link" href="/shopping/itemAdd">등록</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Ritem">반지</a>
+                        <a class="nav-link" href="/shopping/Ritem">반지</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Nitem">목걸이</a>
+                        <a class="nav-link" href="/shopping/Nitem">목걸이</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="Eitem">귀걸이</a>
+                        <a class="nav-link" href="/shopping/Eitem">귀걸이</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="ask">1:1 문의</a>
