--- a/src/main/resources/templates/my/cart.html
+++ b/src/main/resources/templates/my/cart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <link rel="stylesheet" type="text/css" href="css/hee.css" />
+  <link rel="stylesheet" type="text/css" href="/css/hee.css" />
 
 </head>
 <body>
