--- a/src/main/resources/templates/orderDetail.html
+++ b/src/main/resources/templates/orderDetail.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.0.3/tailwind.min.css">
     <!-- 폰트어썸 불러오기 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
-    <link rel="stylesheet" type="text/css" href="css/orderDetail.css" />
+    <link rel="stylesheet" type="text/css" href="/css/orderDetail.css" />
 </head>
 
 <body class="sub_page">
