--- a/src/main/resources/templates/Item/itemAdd.html
+++ b/src/main/resources/templates/Item/itemAdd.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-  <link rel="stylesheet" type="text/css" href="css/itemAdd.css" />
+  <link rel="stylesheet" type="text/css" href="/css/itemAdd.css" />
 </head>
 <body>
 <div th:replace="fragments/header :: headerFragment"></div>
@@ -72,20 +72,20 @@
 
 
 <!-- jQery -->
-<script src="js/jquery-3.4.1.min.js"></script>
+<script src="/js/jquery-3.4.1.min.js"></script>
 <!-- popper js -->
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
 </script>
 <!-- bootstrap js -->
-<script src="js/bootstrap.js"></script>
+<script src="/js/bootstrap.js"></script>
 <!-- owl slider -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
 </script>
 <!-- isotope js -->
 <script src="https://unpkg.com/isotope-layout@3.0.4/dist/isotope.pkgd.min.js"></script>
 <!-- custom js -->
-<script src="js/custom.js"></script>
-<script src="js/board.js"></script>
+<script src="/js/custom.js"></script>
+<script src="/js/board.js"></script>
 <script th:inline="javascript">
 
   $(document).ready(function(){
