--- a/src/main/resources/templates/askCheck.html
+++ b/src/main/resources/templates/askCheck.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="css/sidebar.css" />
+  <link rel="stylesheet" type="text/css" href="/css/sidebar.css" />
 </head>
 <body class="sub_page">
 <div th:replace="fragments/header :: headerFragment"></div>
@@ -89,12 +89,12 @@
 
 
 <!-- jQery -->
-<script src="js/jquery-3.4.1.min.js"></script>
+<script src="/js/jquery-3.4.1.min.js"></script>
 <!-- popper js -->
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
 </script>
 <!-- bootstrap js -->
-<script src="js/bootstrap.js"></script>
+<script src="/js/bootstrap.js"></script>
 <!-- owl slider -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js">
 </script>
@@ -103,8 +103,8 @@
 <!-- nice select -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-nice-select/1.1.0/js/jquery.nice-select.min.js"></script>
 <!-- custom js -->
-<script src="js/custom.js"></script>
-<script src="js/board.js"></script>
+<script src="/js/custom.js"></script>
+<script src="/js/board.js"></script>
 
 </body>
 
