--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -11,19 +11,10 @@
 <div class="form_wrapper">
   <div class="form_container">
     <div class="title_container">
-      <h2>Responsive Login Form</h2>
+      <h2>로 그 인</h2>
     </div>
     <div class="row clearfix">
-      <div class="col_half">
-        <div class="social_btn fb"><a href="#"><span><i class="fab fa-facebook" aria-hidden="true"></i></span>Sign in with Facebook</a></div>
-        <div class="social_btn tw"><a href="#"><span><i class="fab fa-twitter" aria-hidden="true"></i></span>Sign in with Twitter</a></div>
-        <div class="social_btn gplus"><a href="#"><span><i class="fab fa-google-plus" aria-hidden="true"></i></span>Sign in with Google+</a></div>
-        <div class="row clearfix create_account">
-          <div><a href="#">Create an Account</a></div>
-        </div>
-      </div>
-      <div class="col_half last">
-        <form action="/login" method="post">
+        <form action="member/login" method="post">
           <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
           <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
           <div class="input_field"><span><i class="fa fa-envelope" aria-hidden="true"></i></span>
@@ -35,13 +26,12 @@
           <input class="button" type="submit" value="로그인"/>
           <div class="row clearfix bottom_row">
 <!--            <div class="col_half forgot_pw"><a href="#">Forgot Password?</a></div>-->
+              <div><a href="/member/join">Create an Account</a></div>
           </div>
         </form>
-      </div>
     </div>
   </div>
 </div>
-<p class="credit">Developed by <a href="http://www.designtheway.com/responsive-login-form/" target="_blank">Design the way</a></p>
 
 
 </body>
