--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="/shopping/Eitem">귀걸이</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="ask">1:1 문의</a>
+                        <a class="nav-link" sec:authorize="isAuthenticated()" href="/shopping/ask">1:1 문의</a>
                     </li>
                 </ul>
                 <div class="user_option">
