--- a/src/main/resources/templates/Item/item.html
+++ b/src/main/resources/templates/Item/item.html
@@ -38,7 +38,7 @@
           <div class="col-sm-6 col-lg-4 all laptop" th:each="item : ${items}" >
             <div class="box">
               <div>
-                <a th:href="@{i_d(id=${item.getIseq()})}">
+                <a th:href="@{/shopping/i_d(id=${item.getIseq()})}">
                 <div class="img-box">
                   <img th:with="fileName=${#strings.substringAfter(item.img, '_')}" th:src="@{'/images/' + ${fileName}}" alt="">
                 </div>
