--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -1,4 +1,5 @@
 <header class="header_section" style="background-color: black" xmlns:sec="http://www.w3.org/1999/xhtml">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <div class="container">
         <nav class="navbar navbar-expand-lg custom_nav-container ">
             <a class="navbar-brand" href="home">
@@ -20,9 +21,6 @@
                         <a class="nav-link" href="/shopping/Bitem">팔찌</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/shopping/itemAdd">등록</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link" href="/shopping/Ritem">반지</a>
                     </li>
                     <li class="nav-item">
@@ -42,13 +40,17 @@
                             <path d="M10.828.122A.5.5 0 0 1 11 .5V1h.5A1.5 1.5 0 0 1 13 2.5V15h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V1.5a.5.5 0 0 1 .43-.495l7-1a.5.5 0 0 1 .398.117M11.5 2H11v13h1V2.5a.5.5 0 0 0-.5-.5M4 1.934V15h6V1.077z"/>
                         </svg>
                     </a>
-                    <a href="my" sec:authorize="isAuthenticated()" class="cart_link">
+                    <a href="/member/my" sec:authorize="isAuthenticated()" class="cart_link">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-person-circle nav_btn" viewBox="0 0 16 16">
                             <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
                             <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
                         </svg>
                     </a>
-                    <a href="cart" sec:authorize="isAuthenticated()" class="cart_link">
+                    <a href="/shopping/itemAdd" sec:authorize="hasRole('ADMIN')" class="cart_link" style="color: white">
+                        <i class="fas fa-cloud-upload-alt"></i> <!-- 업로드 아이콘 -->
+                    </a>
+
+                    <a href="/shopping/cart" sec:authorize="isAuthenticated()" class="cart_link">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-cart4 nav_btn" viewBox="0 0 16 16">
                             <path d="M0 2.5A.5.5 0 0 1 .5 2H2a.5.5 0 0 1 .485.379L2.89 4H14.5a.5.5 0 0 1 .485.621l-1.5 6A.5.5 0 0 1 13 11H4a.5.5 0 0 1-.485-.379L1.61 3H.5a.5.5 0 0 1-.5-.5zM3.14 5l.5 2H5V5H3.14zM6 5v2h2V5H6zm3 0v2h2V5H9zm3 0v2h1.36l.5-2H12zm1.11 3H12v2h.61l.5-2zM11 8H9v2h2V8zM8 8H6v2h2V8zM5 8H3.89l.5 2H5V8zm0 5a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0zm9-1a1 1 0 1 0 0 2 1 1 0 0 0 0-2zm-2 1a2 2 0 1 1 4 0 2 2 0 0 1-4 0z"/>
                         </svg>
