배송지 관리 페이지 만드는중

--- a/src/main/resources/templates/my/myAddress.html
+++ b/src/main/resources/templates/my/myAddress.html
@@ -13,10 +13,10 @@
 <section class="book_section layout_padding">
   <div class="container">
     <div class="row">
-        <div class="sidebar">
-          <li><a href="/shopping/ask">1:1 문의하기</a></li>
-          <li><a href="/shopping/askCheck">문의 내역 확인</a></li>
-        </div>
+      <div class="sidebar">
+        <li><a href=ask>1:1 문의하기</a></li>
+        <li><a href="askCheck">문의 내역 확인</a></li>
+      </div>
       <div class="col-md-3"></div>
       <div class="col-md-9">
         <div class="heading_container">
