--- a/src/main/resources/templates/my/myAddress.html
+++ b/src/main/resources/templates/my/myAddress.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="/css/sidebar.css" />
 </head>
 <body class="sub_page">
 <div th:replace="fragments/header :: headerFragment"></div>
 <div th:include="fragments/nav.html"></div>
+<link rel="stylesheet" type="text/css" href="/css/sidebar.css" />
 
 
 
@@ -13,14 +13,9 @@
 <section class="book_section layout_padding">
   <div class="container">
     <div class="row">
-      <div class="sidebar">
-        <li><a href=ask>1:1 문의하기</a></li>
-        <li><a href="askCheck">문의 내역 확인</a></li>
-      </div>
-      <div class="col-md-3"></div>
       <div class="col-md-9">
         <div class="heading_container">
-          <h3> 문의내역 확인 </h3>
+          <h2> 배송지 관리 </h2>
         </div>
         <div class="form_container">
           <table>
@@ -33,51 +28,39 @@
             </colgroup>
             <thead>
             <tr>
-              <th><input class="check all" type="checkbox"></th>
-              <th>번호</th>
-              <th>제목</th>
-              <th>작성자</th>
-              <th>날짜</th>
+              <th><input class="check all" type="checkbox" onclick="checkAll(this)"></th>
+              <th>배송지 이름</th>
+              <th>주소</th>
+              <th>받는사람</th>
+              <th>연락처</th>
+              <th>수정</th>
+              <th>기본 배송지</th>
             </tr>
             </thead>
             <tbody>
             <tr>
               <td><input class="check" type="checkbox"></td>
-              <td>1</td>
-              <td><a href="#">글의 제목 - 1</a></td>
-              <td>거북이</td>
-              <td>2019.10.14</td>
+              <td>우리집</td>
+              <td><a href="#">서울시 광진구 천호대로 122길 17-6, 501호</a></td>
+              <td>신예희</td>
+              <td>010-2307-4754</td>
+              <td> <a href="#">수정</a> </td>
+              <td> <a href="#"> O </a> </td>
             </tr>
             <tr>
               <td><input class="check" type="checkbox"></td>
-              <td>2</td>
-              <td><a href="#">글의 제목 - 2</a></td>
-              <td>거북이</td>
-              <td>2019.10.14</td>
-            </tr>
-            <tr>
-              <td><input class="check" type="checkbox"></td>
-              <td>3</td>
-              <td><a href="#">글의 제목 - 3</a></td>
-              <td>거북이</td>
-              <td>2019.10.14</td>
+              <td>우리집</td>
+              <td><a href="#">서울시 광진구 천호대로 122길 17-6, 501호</a></td>
+              <td>신예희</td>
+              <td>010-2307-4754</td>
+              <td> <a href="#">수정</a> </td>
+              <td> <a href="#"> 기본 값으로 설정 </a> </td>
             </tr>
             </tbody>
           </table>
-          <div class="page-box">
-            <a class="btn" href="#">&lt;&lt;</a>
-            <a class="btn" href="#">&lt;</a>
 
-            <!--  숫자 버튼  -->
-            <a class="btn number" href="#">1</a>
-            <a class="btn number" href="#">2</a>
-            <a class="btn number on" href="#">3</a>
-            <a class="btn number" href="#">4</a>
-            <a class="btn number" href="#">5</a>
+          <button>삭제하기</button>
 
-            <a class="btn" href="#">&gt;</a>
-            <a class="btn" href="#">&gt;&gt;</a>
-          </div>
         </div>
       </div>
     </div>
@@ -105,6 +88,15 @@
 <!-- custom js -->
 <script src="/js/custom.js"></script>
 <script src="/js/board.js"></script>
+
+<script>
+  function checkAll(source) {
+    var checkboxes = document.querySelectorAll('.check');
+    checkboxes.forEach(function(checkbox) {
+      checkbox.checked = source.checked;
+    });
+  }
+</script>
 
 </body>
 
