--- a/src/main/resources/templates/my/mypage.html
+++ b/src/main/resources/templates/my/mypage.html
@@ -71,12 +71,12 @@
       <div class="text">주문목록</div>
       <div class="right"> > </div>
     </a>
-    <a href="#" class="item">
+    <a href="/shopping/askCheck" class="item">
       <div class="icon">ii</div>
       <div class="text">문의내역</div>
       <div class="right"> > </div>
     </a>
-    <a href="#" class="item">
+    <a href="/member/myadd" class="item">
       <div class="icon">ii</div>
       <div class="text">배송지 관리</div>
       <div class="right"> > </div>
