--- a/src/main/resources/templates/my/mypage.html
+++ b/src/main/resources/templates/my/mypage.html
@@ -66,7 +66,7 @@
 
   </div>
   <div class="listContainer">
-    <a href="#" class="item">
+    <a href="/member/o_l" class="item">
       <div class="icon">ii</div>
       <div class="text">주문목록</div>
       <div class="right"> > </div>
@@ -97,7 +97,7 @@
 <!--        > </div>-->
 <!--    </a>-->
 
-    <a href="#" class="item">
+    <a href="/member/memEdit" class="item">
       <div class="icon">ii</div>
       <div class="text">정보 수정</div>
       <div class="right"> > </div>
