--- a/src/main/resources/templates/my/mypage.html
+++ b/src/main/resources/templates/my/mypage.html
@@ -15,7 +15,7 @@
       <div class="name" th:text="${nowMember.name}">이름</div>
     </div>
     <div class="modify">
-      <a href="logout" class="logout-btn">로그아웃</a>
+      <a href="/member/logout" class="logout-btn">로그아웃</a>
     </div>
   </div>
 <!--  <div class="summaryContainer">-->
