--- a/src/main/resources/templates/ask.html
+++ b/src/main/resources/templates/ask.html
@@ -23,7 +23,7 @@
         </div>
         <div class="form_container">
           <form action="ask" method="post" th:object="${ask}">
-            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+<!--            <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
             <div>
               <input type="text" th:field="*{title}" class="form-control ask_title" placeholder="제목" />
             </div>
