--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -37,7 +37,7 @@
                         <p th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}" class="fieldError">Incorrect data</p>
                     </div>
                     <input class="button" type="submit" value="회원가입" />
-                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+<!--                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
                 </form>
             </div>
         </div>
