--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -15,7 +15,7 @@
     </div>
     <div class="row clearfix">
         <form action="/member/login" method="post">
-          <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+<!--          <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
           <p th:if="${loginErrorMsg}" class="error" th:text="${loginErrorMsg}"></p>
           <div class="input_field"><span><i class="fa fa-envelope" aria-hidden="true"></i></span>
             <input type="email" id="email" name="email" placeholder="Email" required />
