구매 기능 구현

--- a/src/main/resources/static/css/orderDetail.css
+++ b/src/main/resources/static/css/orderDetail.css
@@ -24,3 +24,10 @@ a {
     color: white;
     background-color: black;
 }
+input[type=number] {
+    width: 40px;
+}
+
+dd.myTitle {
+    text-align: center;
+}
