주문 시, 상품 정보 글씨 키우기

--- a/src/main/resources/templates/itemBuy.html
+++ b/src/main/resources/templates/itemBuy.html
@@ -19,7 +19,7 @@
 
 <!-- 주문상품 정보 시작 -->
 <div class="container max-w-screen-lg mx-auto" th:each="item : ${items}">
-    <div class="relative overflow-visible">
+    <div class="relative overflow-visible orderInfo">
         <h2 class="mt-10 border-b-2 border-black text-xl">주문상품 정보</h2>
         <div class="box-border">
             <div class="w-full table">
