--- a/src/main/resources/templates/my/cart.html
+++ b/src/main/resources/templates/my/cart.html
@@ -25,16 +25,16 @@
           <th></th>
         </tr>
         </thead>
-        <tbody>
+        <tbody th:each="cart : ${cartByMember}">
         <tr class="cart-table-content">
           <td><input type="checkbox" name="checkbox1" value="select"></td>
-          <td class="cart-table-image-info"><img src="http://via.placeholder.com/350x150"></td>
-          <td class="bold-text red-text cart-table-desktop"><span class="bold-text">삼성 통돌이</span></td>
-          <td class="cart-table-desktop">라벤더 그레이</td>
+          <td class="cart-table-image-info"><img th:with="fileName=${#strings.substringAfter(cart.item.img, '_')}" th:src="@{'/images/' + ${fileName}}" alt=""></td>
+          <td class="bold-text red-text cart-table-desktop"><span class="bold-text" th:text="${cart.item.name}">삼성 통돌이</span></td>
+          <td class="cart-table-desktop"th:text="${cart.item.color}">라벤더 그레이</td>
           <td class="cart-table-desktop">
-              <input type="number" id="quantity" name="quantity" min="1" value="1">
+              <input type="number" id="quantity" name="quantity" min="1" th:value="${cart.count}">
           </td>
-          <td class="cart-table-desktop">602,000 원</td>
+        <td class="cart-table-desktop" th:text="${#numbers.formatInteger(cart.item.price, 0, 'COMMA') + '원'}">602,000 원</td>
           <td class="cart-delete"><button class="delete-btn">삭제</button></td>
         </tr>
         </tbody>
