--- a/src/main/resources/templates/my/cart.html
+++ b/src/main/resources/templates/my/cart.html
@@ -34,7 +34,7 @@
           <td class="cart-table-desktop">
               <input type="number" id="quantity" name="quantity" min="1" th:value="${cart.count}">
           </td>
-        <td class="cart-table-desktop" th:text="${#numbers.formatInteger(cart.item.price, 0, 'COMMA') + '원'}">602,000 원</td>
+        <td class="cart-table-desktop" th:text="${#numbers.formatInteger(cart.item.price, 0, 'COMMA') + ' 원'}">602,000 원</td>
           <td class="cart-delete"><button class="delete-btn">삭제</button></td>
         </tr>
         </tbody>
@@ -43,8 +43,9 @@
     <div class="cart-block-right">
 
       <div class="cart-table-bill">
-        <div class="bill-sub">Subtotal: $1.00</div>
-        <div class="bill-total bold-text">Subtotal: $1.00</div>
+        <div class="bill-total bold-text">
+          주문금액 : <span th:text="${#numbers.formatInteger(totalPrice, 0, 'COMMA') + ' 원'}"></span>
+        </div>
       </div>
       <div class="cart-header-footer">
         <a href="#" class="cart-header-cta red-bg" target="_blank">Proceed to Checkout</a>
