장바구니 코드 재배치

--- a/src/main/resources/templates/my/cart.html
+++ b/src/main/resources/templates/my/cart.html
@@ -48,7 +48,7 @@
         </div>
       </div>
       <div class="cart-header-footer">
-        <a href="#" class="cart-header-cta red-bg" target="_blank">Proceed to Checkout</a>
+        <a href="#" class="cart-header-cta red-bg" target="_blank">구매하기</a>
       </div><br>
     </div>
   </div>
