--- a/src/main/resources/templates/my/myAddress.html
+++ b/src/main/resources/templates/my/myAddress.html
@@ -59,8 +59,14 @@
             </tbody>
           </table>
 
-          <button>삭제하기</button>
-
+          <div class="row">
+            <div class="txt">
+              <button>추가하기</button>
+            </div>
+            <div class="txt addDelete">
+              <a href="#">삭제하기</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
