--- a/src/main/resources/templates/my/myAdd.html
+++ b/src/main/resources/templates/my/myAdd.html
@@ -13,27 +13,27 @@
     <h1>배송지 추가</h1>
   </div>
 <div class="container">
-  <form action="/addAdd" method="post" enctype="multipart/form-data">
+  <form action="/member/myAddress" method="post" th:object="${memberAddress}" enctype="multipart/form-data">
 <!--    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
     <div class="form-group">
       <label for="name">주소지명</label>
-      <input type="text"  id="name" name="name" required />
+      <input type="text" th:field="*{title}" id="name" name="name" required />
     </div>
       
     <div class="form-group row">
         <div class="form-group col-6">
             <label for="name">받는 사람</label>
-            <input type="text" required />
+            <input type="text" th:field="*{address.name}" required />
         </div>
         <div class="form-group col-6">
             <label for="name">전화번호</label>
-            <input type="text" required />
+            <input type="text" th:field="*{address.phone}" required />
         </div>
     </div>
       <div class="form-group row">
           <div class="form-group col-6">
               <label for="name">우편번호</label>
-              <input type="text" id="zipcode" required />
+              <input type="text" th:field="*{address.zipCode}" id="zipcode" required />
           </div>
           <div class="form-group col-6">
               <label for="name"></label>
@@ -42,12 +42,12 @@
       </div>
       <div class="form-group">
           <label for="name">주소</label>
-          <input type="text" id="address" required />
+          <input type="text" th:field="*{address.city}" id="address" required />
       </div>
       <div class="form-group row">
           <div class="form-group col-6">
               <label for="name">상세 주소</label>
-              <input type="text" id="detailAddress" required />
+              <input type="text" id="detailAddress" th:field="*{address.street}" required />
           </div>
           <div class="form-group col-6">
               <label for="name">참고 항목</label>
@@ -56,7 +56,7 @@
       </div>
       
     <div class="form-group">
-      <input type="submit" value="상품 등록" />
+      <input type="submit" value="배송지 추가" />
     </div>
   </form>
 </div>
