jquery , footer에 삽입

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -78,6 +78,7 @@
             <a href="https://themewagon.com/" target="_blank">ThemeWagon</a>
           </p>
         </div>
+        <script src="/js/jquery-3.4.1.min.js"></script>
       </div>
   </footer>
 </th:block>
