--- a/src/main/resources/templates/my/cart.html
+++ b/src/main/resources/templates/my/cart.html
@@ -10,48 +10,51 @@
 
 
 <div class="cart-page">
-  <div class="cart-page-container"><br>
-    <!--For cart page and thank you page-->
-    <div class="cart-page-table">
-      <table class="cart-table-product">
-        <thead>
-        <tr class="cart-table-header">
-          <th class="cart-table-select"><input class="check all" type="checkbox" onclick="checkAll(this)"></th>
-          <th class="cart-table-img"></th>
-          <th class="cart-table-desktop cart-table-product-name">상품 정보</th>
-          <th class="cart-table-desktop cart-table-payment">옵션</th>
-          <th class="cart-table-desktop cart-table-size">수량</th>
-          <th class="cart-table-size right-text-mobile">주문 금액</th>
-          <th></th>
-        </tr>
-        </thead>
-        <tbody th:each="cart : ${cartByMember}">
-        <tr class="cart-table-content">
-          <td><input type="checkbox" name="checkbox1" value="select" class="check"></td>
-          <td class="cart-table-image-info"><img th:with="fileName=${#strings.substringAfter(cart.item.img, '_')}" th:src="@{'/images/' + ${fileName}}" alt=""></td>
-          <td class="bold-text red-text cart-table-desktop"><span class="bold-text" th:text="${cart.item.name}">삼성 통돌이</span></td>
-          <td class="cart-table-desktop"th:text="${cart.item.color.getName()}">라벤더 그레이</td>
-          <td class="cart-table-desktop">
-              <input type="number" id="quantity" name="quantity" min="1" th:value="${cart.count}">
-          </td>
-        <td class="cart-table-desktop" th:text="${#numbers.formatInteger(cart.item.price, 0, 'COMMA') + ' 원'}">602,000 원</td>
-          <td class="cart-delete"><button class="delete-btn">삭제</button></td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-    <div class="cart-block-right">
-
-      <div class="cart-table-bill">
-        <div class="bill-total bold-text">
-          주문금액 : <span th:text="${#numbers.formatInteger(totalPrice, 0, 'COMMA') + ' 원'}"></span>
-        </div>
+  <form action="/shopping/itemsBuy" method="post">
+    <div class="cart-page-container"><br>
+      <!--For cart page and thank you page-->
+      <div class="cart-page-table">
+        <table class="cart-table-product">
+          <thead>
+          <tr class="cart-table-header">
+            <th class="cart-table-select"><input class="check all" type="checkbox" onclick="checkAll(this)"></th>
+            <th class="cart-table-img"></th>
+            <th class="cart-table-desktop cart-table-product-name">상품 정보</th>
+            <th class="cart-table-desktop cart-table-payment">옵션</th>
+            <th class="cart-table-desktop cart-table-size">수량</th>
+            <th class="cart-table-size right-text-mobile">주문 금액</th>
+            <th></th>
+          </tr>
+          </thead>
+          <tbody th:each="cart : ${cartByMember}">
+          <tr class="cart-table-content">
+            <td><input type="checkbox" name="checkbox1" value="select" class="check"></td>
+            <td class="cart-table-image-info"><img th:with="fileName=${#strings.substringAfter(cart.item.img, '_')}" th:src="@{'/images/' + ${fileName}}" alt=""></td>
+            <td class="bold-text red-text cart-table-desktop"><span class="bold-text" th:text="${cart.item.name}">삼성 통돌이</span></td>
+            <td class="cart-table-desktop"th:text="${cart.item.color.getName()}">라벤더 그레이</td>
+            <td class="cart-table-desktop">
+                <input type="number" id="quantity" name="quantity" min="1" th:value="${cart.count}">
+                <input type="hidden" th:value="${cart.item.iseq}">
+            </td>
+          <td class="cart-table-desktop" th:text="${#numbers.formatInteger(cart.item.price, 0, 'COMMA') + ' 원'}">602,000 원</td>
+            <td class="cart-delete"><a href="#" class="delete-btn">삭제</a></td>
+          </tr>
+          </tbody>
+        </table>
       </div>
-      <div class="cart-header-footer">
-        <a href="#" class="cart-header-cta red-bg" target="_blank">구매하기</a>
-      </div><br>
+      <div class="cart-block-right">
+
+        <div class="cart-table-bill">
+          <div class="bill-total bold-text">
+            주문금액 : <span th:text="${#numbers.formatInteger(totalPrice, 0, 'COMMA') + ' 원'}"></span>
+          </div>
+        </div>
+        <div class="cart-header-footer">
+          <button type="submit" class="cart-header-cta red-bg" target="_blank">구매하기</button>
+        </div><br>
+      </div>
     </div>
-  </div>
+  </form>
 </div>
 
 
